@@ -48,8 +48,9 @@ Library
   while running under the ``-3`` flag: aifc, asyncore, bdb, bsddb,
   ConfigParser, cookielib, DocXMLRPCServer, email, filecmp, fileinput, inspect,
   logging, modulefinder, pdb, pickle, profile, pstats, pydoc, re, rlcompleter,
-  SimpleXMLRPCServer, shelve, sqlite3, tarfile, Tkinter, test.test_support,
-  textwrap, threading, tokenize, traceback, urlparse, wsgiref, xml, xmlrpclib.
+  SimpleXMLRPCServer, shelve, subprocess, sqlite3, tarfile, Tkinter,
+  test.test_support, textwrap, threading, tokenize, traceback, urlparse,
+  wsgiref, xml, xmlrpclib.
 
 - Issue #3039: Fix tarfile.TarFileCompat.writestr() which always
   raised an AttributeError.
